# tg-sticker-formatter

./: README.md  main.py  pyproject.toml  requirements.txt
